mensajes al editar correo

--- a/administrador/static/styles/mostrar_paciente_administrador.css
+++ b/administrador/static/styles/mostrar_paciente_administrador.css
@@ -291,6 +291,55 @@ strong {
     box-sizing: border-box;
 }
 
+.modal-men {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 0.625rem;
+    width: 17rem;
+    height: 8rem;
+    margin: auto; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+}
+
+
+.contenido-modal-mensaje {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 300px;
+    width: 100%;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border-left-color: #09f;
+    animation: spin 1s ease infinite;
+    margin: 0 auto 15px;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+.modal-men img {
+    width: 75px;
+    height: 75px;
+    margin-bottom: 15px;
+}
+
 
 @media screen and (max-width:1200px){
     .columna p{
