detalles mensajes editar credenciales

--- a/administrador/static/styles/mostrar_paciente_administrador.css
+++ b/administrador/static/styles/mostrar_paciente_administrador.css
@@ -307,6 +307,7 @@ strong {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    z-index: 1001;
 }
 
 
