--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -37,7 +37,7 @@
             <p><strong>Fecha de Ingreso:</strong><br><span>{{paciente.date_joined}}</span></p>
             <p><strong>Correo Electrónico:</strong><br> <span>{{ paciente.email }}</span></p>
             <p><strong>Número de teléfono:</strong><br> <span>{{ paciente.telefono }}</span></p>
-            <p><strong>Dirección:</strong><br> <span>{{ paciente.calle }}, {{ paciente.comuna }}, {{ paciente.provincia }}, {{ paciente.region }}</span></p>
+            <p><strong>Dirección:</strong><br> <span>{{ paciente.calle }}, {{ paciente.comuna }}, {{ paciente.region }}</span></p>
             <p><strong>Contacto de emergencia:</strong><br> <span>{{ paciente.contacto_emergencia }}</span></p>
             <p><strong>Número contacto de emergencia:</strong><br> <span>{{ paciente.telefono_emergencia }}</span></p>
             <p><strong>Estado:</strong><br> <span>
