--- a/recepcionista/templates/editar_datos_paciente_recepcionista.html
+++ b/recepcionista/templates/editar_datos_paciente_recepcionista.html
@@ -146,12 +146,6 @@
             </div>
 
             <div class="form-group">
-                <label for="{{ paciente_form.provincia.id_for_label }}">{{ paciente_form.provincia.label }}</label>
-                {{ paciente_form.provincia }}
-                <div class="error">{{ paciente_form.provincia.errors }}</div>
-            </div>
-
-            <div class="form-group">
                 <label for="{{ paciente_form.comuna.id_for_label }}">{{ paciente_form.comuna.label }}</label>
                 {{ paciente_form.comuna }}
                 <div class="error">{{ paciente_form.comuna.errors }}</div>
@@ -191,35 +185,20 @@
         window.location.href = "{% url 'mostrar_paciente_recepcionista' paciente.id %}";
     });
 
+<script>
     document.addEventListener("DOMContentLoaded", function() {
         var regionField = document.getElementById("id_region");
-        var provinciaField = document.getElementById("id_provincia");
         var comunaField = document.getElementById("id_comuna");
         
         regionField.addEventListener("change", function() {
             var regionId = this.value;
-            provinciaField.innerHTML = ""; // Limpiar opciones anteriores
             comunaField.innerHTML = ""; // Limpiar opciones anteriores
+
             if (regionId) {
-                fetch(`/api/provincias/?region=${regionId}`)
+                fetch(`/api/comunas/?region=${regionId}`)
                 .then(response => response.json())
                 .then(data => {
-                    data.forEach(provincia => {
-                        var option = document.createElement("option");
-                        option.value = provincia.id;
-                        option.textContent = provincia.nombre;
-                        provinciaField.appendChild(option);
-                    });
-                });
-            }
-        });
-        provinciaField.addEventListener("change", function() {
-            var provinciaId = this.value;
-            comunaField.innerHTML = ""; // Limpiar opciones anteriores
-            if (provinciaId) {
-                fetch(`/api/comunas/?provincia=${provinciaId}`)
-                .then(response => response.json())
-                .then(data => {
+                    // Actualizar opciones del campo de selección de comuna
                     data.forEach(comuna => {
                         var option = document.createElement("option");
                         option.value = comuna.id;
@@ -230,6 +209,8 @@
             }
         });
     });
+</script>
+    
 </script>
 <script src="{% static 'js/formatear-rut.js' %}"></script>
 <script src="{% static 'js/formatear-telefono.js' %}"></script>
