--- a/ortesisWeb/static/css/base/header.css
+++ b/ortesisWeb/static/css/base/header.css
@@ -19,16 +19,14 @@
 }
 
 .notification-icon a {
-    top: 15px;
-    right: 20px;
     text-decoration: none;
     color: white;
 }
 
 .modal-notificaciones {
     position: absolute;
-    top: 60px;
-    right: 20px;
+    top: 45px;
+    right: 5px;
     width: auto;
     max-height: 80%;
     overflow-y: auto;
@@ -42,7 +40,7 @@
 .contenido-notificaciones {
     background-color: #fff;
     padding: 20px;
-    width: 500px;
+    width: 100%;
     max-height: 80%;
     overflow-y: auto;
     border-radius: 8px;
@@ -93,18 +91,14 @@
     outline: none;
 }
 
-@media (max-width: 770px) and (max-height: 953px) {
+@media (max-width: 770px) and (min-width: 50px) {
     .modal-notificaciones {
-        top: 200px;
-        left: auto;
+        top: 200px; /* Ajuste específico para este tamaño de pantalla */
+        right: 5px; /* Alineado debajo del icono */
         width: 250px;
         max-height: 80%;
         z-index: 1000;
+        border-radius: 8px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .contenido-notificaciones {
-        width: 100%;
-        max-height: 80%;
     }
 }
